<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="16dp"
    tools:context=".login.views.Login">

    <ScrollView
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/login_layout"
                android:padding="16dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_pharma_seeklogo"
                    android:layout_width="120dp"
                    android:layout_height="120dp" />

                <EditText
                    android:id="@+id/login"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/icon"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:hint="@string/usu_rio_ou_email"
                    android:background="@drawable/background_input_rounded"/>

                <EditText
                    android:id="@+id/password"
                    android:background="@drawable/background_input_rounded"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"
                    android:padding="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/senha"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:layout_below="@id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_margin="15dp"
                    android:background="@drawable/background_button_rounded"
                    android:layout_below="@id/password"
                    android:layout_width="match_parent"
                    android:text="@string/entrar"
                    android:onClick="login"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:padding="20dp"
                    android:textColor="#ffffff"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_margin="15dp"
                    android:background="@drawable/background_button_rounded"
                    android:layout_below="@id/login_button"
                    android:layout_width="match_parent"
                    android:onClick="register"
                    android:text="@string/cadastre_se"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:padding="20dp"
                    android:textColor="#ffffff"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/recovery"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:onClick="recuperarSenha"
                    android:layout_below="@id/register_button"
                    android:text="@string/esqueceu_a_senha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <include layout="@layout/loading_layout"/>

</RelativeLayout>